After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724092 - Fail to build with C++11 mode enabled
Fail to build with C++11 mode enabled
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
1.39.x
Other FreeBSD
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-11 03:55 UTC by Ting-Wei Lan
Modified: 2014-02-17 20:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix build when using C++11 mode (711 bytes, patch)
2014-02-11 03:55 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2014-02-11 03:55:17 UTC
Created attachment 268750 [details] [review]
Fix build when using C++11 mode

I get the error when building gjs with CXX="clang++ -std=c++11".

gjs/importer.cpp:777:55: error: invalid suffix on literal; C++11 requires a space between literal and identifier [-Wreserved-user-defined-literal]
                    if (g_str_has_suffix(filename, "."G_MODULE_SUFFIX) ||
                                                      ^
Comment 1 Giovanni Campagna 2014-02-13 14:16:37 UTC
Review of attachment 268750 [details] [review]:

Looks good. But it should be a warning, not an error...