Fix build with c++11 mode

Add a space between "." and G_MODULE_SUFFIX.  Having them touching each
other gives this error with a sufficiently picky compiler (clang):

  error: invalid suffix on literal; C++11 requires a space between
  literal and identifier [-Wreserved-user-defined-literal]

https://bugzilla.gnome.org/show_bug.cgi?id=724092